tests/errors/Inconsistent2.hs
module Mismatch where

{-@ foo :: Nat @-}
foo :: Bool
foo = True
